feat: refine semantic surface classification and map rendering